# micromanus

./: .gitignore  CLAUDE.md  PLAN.md  README.md
backend/: .env.example  nixpacks.toml  pyproject.toml  railway.json
backend/app/: agent.py  auth.py  config.py  crypto.py  llm.py  main.py  models_config.py  pdf.py  storage.py  supabase_client.py  tools.py
backend/app/routes/: chat.py  keys.py  me.py  models.py  paywall.py  stats.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: NavBar.jsx  RequireAuth.jsx
frontend/src/lib/: AuthContext.jsx  api.js  supabase.js
frontend/src/pages/: Chat.jsx  Login.jsx  Page.jsx  Paywall.jsx  Settings.jsx  Stats.jsx
supabase/: schema.sql
