[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2024.8.30",
    "cryptography>=44.0.0",
    "fastapi>=0.139.2",
    "markdown>=3.7",
    "openai>=1.60.0",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.10.1",
    "stripe>=12.0.0",
    "supabase>=2.15.0",
    "tavily-python>=0.5.0",
    "uvicorn[standard]>=0.51.0",
    "xhtml2pdf>=0.2.16",
]
